# AI

./: README.md  graph.html
CAT 2 - Year 3/: C-135357.ipynb
CAT 2 - Year 4/: C-135357.ipynb
Class Exercise 1/: data_C.csv  lab.ipynb
Class Exercise 2/: nlp.ipynb
Class Exercise 3.3/: pyproject.toml
Class Exercise 4.1/: iris  main.ipynb
Class Exercise 4.10/: main.ipynb  tok.pickle
Class Exercise 4.2/: disc_vs_gen_(LR_compared_to_GMM).ipynb  main.ipynb
Class Exercise 4.3/: main.ipynb
Class Exercise 4.4/: May9.csv  main.ipynb
Class Exercise 4.5/: finance.ipynb  heart_disease.ipynb  outlook.ipynb  titanic.ipynb
Class Exercise 4.5/Datasets/: outlook.csv
Class Exercise 4.6/: 135357.ipynb
Class Exercise 4.7/: main.ipynb
Class Exercise 4.8/: convolution.ipynb  imageClassification.ipynb
Class Exercise 4.9/: main.ipynb
Gym Exercise/: main.py
Lab 1/: DFS.py  bfs.py
Lab 2/: B-135357.ipynb  C-135357.py  Classification_Data.csv  Clustering_Data.csv
Lab 3/: pyproject.toml
Lab 3.1/: C-135357.py
Lab 3.3/: C-135357.ipynb
Lab 4.1/: C-135357.py
Lab 4.2/: 135357.ipynb
Lab 4.3/: C-135357.ipynb
Lab 4.5/: C-135357.ipynb
Make Up Lab/: C-135357.ipynb  language.csv  pyproject.toml  template.ipynb  vector comparison.ipynb
