[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["koechian <ianovic8@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
nltk = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
