[tool.poetry]
name = "make up lab"
version = "0.1.0"
description = "Language Identification Model"
authors = ["Koechian <ianovic8@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
